# expense-tracker-cli

./: .gitignore  README.md  expense_tracker.py  feb.csv  jan.csv  pyproject.toml  test_expense_tracker.py  test_summarize.py
.github/workflows/: ci.yml
data/: sample.csv
