[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
version = "0.1.0"
description = "A CLI for summarizing CSV expense data by month and category"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Ankit Anathula", email = "ankitanathula@gmail.com" }
]
dependencies = [
  "pandas",
  "tabulate"
]

[tool.setuptools]
py-modules = ["expense_tracker"]

[project.scripts]
expense-tracker = "expense_tracker:main"

[tool.flake8]
# Allow up to 100 characters per line
max-line-length = 100

# Ignore specific error codes globally
extend-ignore = ["E203", "E266", "E302", "E305", "W293"]

# Per-file ignores for tests: skip unused-import and line-length errors
per-file-ignores = [
  "test_*.py:F401",
  "test_*.py:E501"
]